# networking-sr

./: .coveragerc  .gitignore  .stestr.conf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
devstack/: README.rst  plugin.sh  sample-local.conf  settings  sr_agent
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
etc/neutron/policy.d/: srv6.conf
networking_sr/: __init__.py
networking_sr/agent/: interface.py  iptables_vrf_firewall.py  rpc.py
networking_sr/cmd/eventlet/: sr_agent.py  srgw_agent.py
networking_sr/common/: config.py  vrf_utils.py
networking_sr/db/: srv6_encap_net_db.py
networking_sr/db/migration/alembic_migrations/: env.py  script.py.mako
networking_sr/db/migration/alembic_migrations/versions/: CONTRACT_HEAD  EXPAND_HEAD
networking_sr/db/migration/alembic_migrations/versions/train/contract/: 927a16680421_initial.py
networking_sr/db/migration/alembic_migrations/versions/train/expand/: 4db8684b17e9_initial.py
networking_sr/extensions/: srv6_encap_network.py
networking_sr/ml2/: type_srv6.py  type_srv6vrf.py
networking_sr/ml2/agent/: dnsmasq_manager.py  sr_agent.py  sr_agent_loop.py
networking_sr/ml2/mech_driver/: mech_sr.py
networking_sr/objects/: srv6_encap_network.py
networking_sr/services/: plugin.py
networking_sr/tests/: test_networking_sr.py
releasenotes/source/: conf.py  index.rst
