[metadata]
name = networking-sr
summary = Networking Segment Routing is neutron plugin to manage segment routing in openstack.
description-file =
    README.rst
author = Hirofumi Ichihara
author-email = hirofumi.ichihara@linecorp.com
home-page = https://github.com/line/networking-sr
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_sr
data_files = 
    etc/neutron/policy.d =
        etc/neutron/policy.d/srv6.conf

[entry_points]
console_scripts =
    neutron-sr-agent = networking_sr.cmd.eventlet.sr_agent:main
    neutron-srgw-agent = networking_sr.cmd.eventlet.srgw_agent:main
neutron.ml2.mechanism_drivers =
    sr = networking_sr.ml2.mech_driver.mech_sr:SrMechanismDriver
neutron.interface_drivers =
    sr = networking_sr.agent.interface:SrInterfaceDriver
neutron.agent.firewall_drivers =
    iptables_vrf = networking_sr.agent.iptables_vrf_firewall:VrfBasedIptablesFirewallDriver
neutron.ml2.type_drivers =
    srv6 = networking_sr.ml2.type_srv6:Srv6TypeDriver
    srv6vrf = networking_sr.ml2.type_srv6vrf:Srv6VrfTypeDriver
neutron.db.alembic_migrations =
    networking-sr = networking_sr.db.migration:alembic_migrations
neutron.service_plugins =
    sr = networking_sr.services.plugin:SRv6EncapNetworkPlugin

[compile_catalog]
directory = networking_sr/locale
domain = networking_sr

[update_catalog]
domain = networking_sr
output_dir = networking_sr/locale
input_file = networking_sr/locale/networking_sr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_sr/locale/networking_sr.pot
